--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-http-status-code": "^1.0.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
     "validator": "^13.7.0",
